# whisper-cap

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  flake.nix
.github/workflows/: linux.yml  macos.yml.bak  windows.yml
lib/cutil/: Cargo.toml  README.md
lib/cutil/src/: backup_recover.rs  crypto.rs  fs.rs  http.rs  lib.rs  str.rs  time.rs  vec.rs
lib/ffmpeg/: Cargo.toml
lib/ffmpeg/data/: test.srt
lib/ffmpeg/src/: lib.rs
lib/font/: Cargo.toml
lib/font/src/: lib.rs
lib/sqldb/: Cargo.toml
lib/transcribe/: .gitignore  Cargo.toml  README.md
lib/transcribe/examples/: install-model.sh  main_model_downloader.rs  main_srt.rs
lib/transcribe/src/: lib.rs  subtitle.rs  vad.rs  wav.rs  whisper.rs  whisper_lang.rs  whisper_model_downloader.rs
package/deb/: README.md  init.sh  pkg-deb.sh
package/deb/package/DEBIAN/: control  copyright
package/deb/package/usr/share/applications/: whispercap.desktop
script/: convert-brand-to-window-icon.sh  init-project.sh  merge-to-slint-template-project.sh  replace-android-icon.sh  replace-android-splash.sh
tr-helper/: Cargo.toml  README.md  build.rs
tr-helper/src/: main.rs  tr.rs
whispercap/: Cargo.toml  build.rs
whispercap/src/: desktop.rs  lib.rs  version.rs
whispercap/src/config/: conf.rs  data.rs  mod.rs
whispercap/src/db/: def.rs  mod.rs
whispercap/src/logic/: clipboard.rs  confirm_dialog.rs  mod.rs  model.rs  popup_action.rs  setting.rs  tr.rs  transcribe.rs  util.rs
whispercap/ui/: android-window.slint  desktop-window.slint  logic.slint  store.slint  theme.slint  util.slint  web-window.slint
whispercap/ui/base/: about.slint  address-book.slint  audio-control.slint  banner.slint  blank-welcome.slint  blanket.slint  bread-crumb.slint  btn.slint  chartbar.slint  check-btn.slint  circle-progress.slint  collapse.slint  confirm-dialog.slint  dash-line.slint  date-picker.slint  def.slint  dialog.slint  divider.slint  elevated-btn.slint  file-picker.slint  flash-progress.slint  flickable-with-scrollbar.slint  gain-focus.slint  group-box.slint  help.slint  icon-btn.slint  icons-dialog.slint  landing-page.slint  language-dialog.slint  led.slint  line-input.slint  link.slint  list-tile.slint  loading.slint  log-in.slint  mnemonic.slint  no-message.slint  pagination.slint  paragraph.slint  password.slint  (+33 more)
whispercap/ui/panel/: def.slint
whispercap/ui/panel/desktop/: home.slint  model.slint  panel.slint
whispercap/ui/panel/desktop/transcribe/: ai-handle-subtitle-setting-dialog.slint  audio-player.slint  export-subtitle-dialog.slint  export-video-dialog.slint  panel.slint  setting-dialog.slint  transcribe.slint  video-player.slint
whispercap/ui/panel/mobile/: footer.slint  home.slint  panel.slint
whispercap/ui/panel/setting/: desktop.slint  mobile.slint
whispercap/ui/panel/setting/components/: backup.slint  help-detail.slint  model.slint  preference.slint  proxy.slint
whispercap/ui/panel/web/: panel.slint
whispercap/web/: index.html
whispercap/windows/: version.h
