[workspace]
exclude = []
resolver = "3"
members = ["whispercap", "lib/*", "tr-helper"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
readme = "README.md"
# rust-version = "1.87"
authors = ["Heng30 <rongheng30@gmail.com>"]
keywords = ["Rust", "GUI", "Slint", "cross-platform"]
homepage = "https://github.com/Heng30/whispercap"
repository = "https://github.com/Heng30/whispercap"
description = "It's a Rust Slint GUI framework project for quick start."

# more information see: `https://sharnoff.io/blog/why-rust-compiler-slow`
[profile.dev]
lto = false
debug = false
opt-level = 0
incremental = true

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"
codegen-units = 1
incremental = true

[workspace.dependencies]
cbc = "0.1"
tar = "0.4"
log = "0.4"
hex = "0.4"
aes = "0.8"
sqlx = "0.8"
rand = "0.9"
clap = "4.5"
toml = "0.9"
duct = "1.0"
uuid = "1.17"
serde = "1.0"
bytes = "1.10"
tokio = "1.45"
regex = "1.11"
slint = "1.12"
image = "0.25"
flate2 = "1.1"
anyhow = "1.0"
chrono = "0.4"
reqwest = "0.12"
tempfile = "3.20"
stacksafe = "0.1"
getrandom = "0.3"
once_cell = "1.21"
serde_json = "1.0"
webbrowser = "1.0"
serde_with = "3.13"
env_logger = "0.11"
slint-build = "1.12"
wasm-bindgen = "0.2"
display-info = "0.5"
native-dialog = "0.9"
embed-resource = "3.0"
android_logger = "0.15"
android_clipboard = "0.1.0"

# maybe outdated
qrcode = "0.14"
walkdir = "2.5"
clipboard = "0.5"
derivative = "2.2"
console_log = "1.0"
crypto-hash = "0.3"
platform-dirs = "0.3"

libc = "0.2"
hound = "3.5"
fast2s = "0.3"
futures = "0.3"
num_cpus = "1.17"
kittyaudio = "0.2"
spin_sleep = "1.3"
whisper-rs = "0.15"
font-kit = "0.14"
async-openai = "0.29"
ffmpeg-sidecar = "2.1"
unicode-segmentation = "1.12"

font = { path = "lib/font" }
cutil = { path = "lib/cutil" }
sqldb = { path = "lib/sqldb" }
ffmpeg = { path = "lib/ffmpeg" }
transcribe = { path = "lib/transcribe" }
