[package]
name = "ffmpeg"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
duct.workspace = true
image.workspace = true
anyhow.workspace = true
serde_json.workspace = true
spin_sleep.workspace = true
ffmpeg-sidecar.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
