[package]
name = "sqldb"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["serde_derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
