[package]
name = "transcribe"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
hound.workspace = true
ffmpeg.workspace = true
anyhow.workspace = true
fast2s.workspace = true
chrono.workspace = true
futures.workspace = true
num_cpus.workspace = true
whisper-rs.workspace = true
unicode-segmentation.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["serde_derive"] }

[dev-dependencies]
once_cell.workspace = true
tokio = { workspace = true, features = ["full"] }
